Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Settings__c/Account_Team_Audit_Trail_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings (error messages, access levels) for the account team audit trail integration.</description>
    <label>Account Team Audit Trail Settings</label>
</CustomObject>