Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Settings__c/fields/Account_Original_Owner_Default_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Original_Owner_Default_Role__c</fullName>
    <description>Role to be assigned on the account team member created for the original owner of the account</description>
    <label>Account Original Owner Default Role</label>
    <length>30</length>
    <type>Text</type>
</CustomField>