Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Settings__c/fields/Add_Action_Text__c.field-meta.xml
<CustomField>
    <fullName>Add_Action_Text__c</fullName>
    <label>Add Action Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>