Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Settings__c/fields/Case_Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Case_Access_Level__c</fullName>
    <label>Case Access Level</label>
    <length>4</length>
    <type>Text</type>
</CustomField>