Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Settings__c/fields/Default_Batch_Source__c.field-meta.xml
<CustomField>
    <fullName>Default_Batch_Source__c</fullName>
    <label>Default Batch Source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>