Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Settings__c/fields/Edit_Access_Level_Text__c.field-meta.xml
<CustomField>
    <fullName>Edit_Access_Level_Text__c</fullName>
    <label>Edit Access Level Text</label>
    <length>4</length>
    <type>Text</type>
</CustomField>