Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Settings__c/fields/Error_Code_Inactive_New_User__c.field-meta.xml
<CustomField>
    <fullName>Error_Code_Inactive_New_User__c</fullName>
    <description>Error code for account team audit trail inactive new user exception.</description>
    <label>Error Code Inactive New User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>