Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Settings__c/fields/Error_Code_Invalid_Action__c.field-meta.xml
<CustomField>
    <fullName>Error_Code_Invalid_Action__c</fullName>
    <label>Error Code Invalid Action</label>
    <length>50</length>
    <type>Text</type>
</CustomField>