Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Settings__c/fields/Error_Code_Missing_Account_Team__c.field-meta.xml
<CustomField>
    <fullName>Error_Code_Missing_Account_Team__c</fullName>
    <label>Error Code Missing Account Team</label>
    <length>50</length>
    <type>Text</type>
</CustomField>