Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Settings__c/fields/Error_Code_No_Commercial_ID_Match__c.field-meta.xml
<CustomField>
    <fullName>Error_Code_No_Commercial_ID_Match__c</fullName>
    <label>Error Code No Commercial ID Match</label>
    <length>50</length>
    <type>Text</type>
</CustomField>