Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Settings__c/fields/Error_Code_No_Matching_New_User__c.field-meta.xml
<CustomField>
    <fullName>Error_Code_No_Matching_New_User__c</fullName>
    <label>Error Code No Matching New User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>