Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Settings__c/fields/Error_Message_Unhandled_Exception__c.field-meta.xml
<CustomField>
    <fullName>Error_Message_Unhandled_Exception__c</fullName>
    <label>Error Message Unhandled Exception</label>
    <length>100</length>
    <type>Text</type>
</CustomField>