Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Settings__c/fields/Exception_Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Exception_Email_Recipient__c</fullName>
    <label>Exception Email Recipient</label>
    <type>Email</type>
</CustomField>