Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Settings__c/fields/Failure_Status__c.field-meta.xml
<CustomField>
    <fullName>Failure_Status__c</fullName>
    <label>Failure Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>