Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Settings__c/fields/Queued_Status__c.field-meta.xml
<CustomField>
    <fullName>Queued_Status__c</fullName>
    <label>Queued Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>