Reetan.Nayak Dev 25/force-app/main/default/objects/Account_Team_Audit_Trail_Settings__c/fields/Remove_Action_Text__c.field-meta.xml
<CustomField>
    <fullName>Remove_Action_Text__c</fullName>
    <description>static string value for account team audit trail&apos;s remove action</description>
    <label>Remove Action Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>